apps/app-proxy/overlays/mycsdptest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: mycsdptest-cap-app-proxy
  namespace: mycsdptest
spec:
  rules:
  - host: vadim-ingresshost.ngrok.io
    http:
      paths:
      - backend:
          service:
            name: cap-app-proxy
            port:
              number: 3017
        path: /app-proxy/
        pathType: Prefix
status:
  loadBalancer: {}
